@@ -13,4 +13,4 @@ RUN ./mvnw dependency:go-offline
 COPY ./src ./src
 
 RUN ./mvnw clean package
-CMD ["java", "-jar", "./target/consultations-service-0.0.1-SNAPSHOT.jar"]
+CMD ["java","-XX:+PrintGCDetails" ,"-XX:+PrintGCDateStamps" ,"-Xloggc:gc.log",  "./target/consultations-service-0.0.1-SNAPSHOT.jar"]
